--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<br/>
 		<div class="centred">
 			<a class="button youtube" href="https://www.youtube.com/c/NoiseReach">Youtube</a>
-			<a class="button discord" href="https://discord.gg/e3ZcevzVWb">Discord</a>
+			<a class="button discord" href="https://discord.gg/qPhSttgUpD">Discord</a>
 		</div>
 		<br/>
 		<br/>
