--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<br/>
 		<br/>
 		<br/>
-		<a class="button centred green" id="download-button" href="https://github.com/noiseereach/noiseclient/archive/refs/heads/main.zip">Download</a>
+		<a class="button centred green" id="download-button" href="https://workupload.com/start/wHHveqGq8Tr">Download</a>
 		<br/>
 		<br/>
 		<br/>
