--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<br/>
 		<br/>
 		<br/>
-		<a class="button centred green" id="download-button" href="https://workupload.com/start/wHHveqGq8Tr">Download</a>
+		<a class="button centred green" id="download-button" href="https://s6.dosya.tc/en2.php?a=server8/5om6q0/noiseclient-main.zip&b=42f7af34b9c4762fa5d05b869f6fb5f5&c=1659451221">Download</a>
 		<br/>
 		<br/>
 		<br/>
