--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<script src="script.js" defer></script>
 	</head>
 	<body>
-		<h1 class="title">Noise Client</h1>
+		<h1 class="title">Noise+ Client</h1>
 		<h1 class="subtitle">Simple yet feature-rich Minecraft Client</h1>
 		<br/>
 		<br/>
@@ -38,7 +38,7 @@
 		<br/>
 		<div class="centred">
 			<a class="button youtube" href="https://www.youtube.com/c/NoiseReach">Youtube</a>
-			<a class="button discord" href="https://discord.gg/wAX5GzmWwW">Discord</a>
+			<a class="button discord" href="https://discord.gg/hZ5AzUQeBQ">Discord</a>
 		</div>
 		<br/>
 		<br/>
