--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1"/>
 		<meta name="msapplication-TileColor" content="#1e1e1e"/>
 		<meta name="theme-color" content="#ffffff"/>
-		<meta name="description" content="Noise Client Web Page."/>
-		<meta name="keywords" content="Minecraft, Noise Client, Noise dll, Minecraft Client, PVP, Minecraft PVP, PVP Client, Minecraft Mod, Replay Mod, Hypixel">
-		<meta property="og:title" content="Noise Client"/>
+		<meta name="description" content="Noise+ Client Web Page."/>
+		<meta name="keywords" content="Minecraft, Noise+ Client, Noise dll, Minecraft Client, PVP, Minecraft PVP, PVP Client, Minecraft Mod, Replay Mod, Hypixel">
+		<meta property="og:title" content="Noise+ Client"/>
 		<meta property="og:type" content="website"/>
 		<meta property="og:url" content="https://noiseereach.github.io/noise/"/>
-		<meta property="og:site_name" content="Noise Client"/>
+		<meta property="og:site_name" content="Noise+ Client"/>
 		<meta property="og:locale" content="en-gb"/>
-		<meta property="og:description" content="Noise Client Web Page."/>
+		<meta property="og:description" content="Noise+ Client Web Page."/>
 		<meta name="twitter:card" content="summary_large_image"/>
 		<meta property="twitter:domain" content="noise.github.io"/>
 		<meta property="twitter:url" content="https://noiseereach.github.io/noise/"/>
-		<meta name="twitter:title" content="Noise Client"/>
-		<meta name="twitter:description" content="Noise Client Web Page"/>
+		<meta name="twitter:title" content="Noise+ Client"/>
+		<meta name="twitter:description" content="Noise+ Client Web Page"/>
 		<title>Noise Client - Free Minecraft Cheat</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com"/>
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
