--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta property="og:title" content="Noise+ Client"/>
 		<meta property="og:type" content="website"/>
 		<meta property="og:url" content="https://noiseereach.github.io/noise/"/>
-		<meta property="og:site_name" content="Noise+ Client"/>
+		<meta property="og:site_name" content="Noise Client"/>
 		<meta property="og:locale" content="en-gb"/>
 		<meta property="og:description" content="Noise+ Client Web Page."/>
 		<meta name="twitter:card" content="summary_large_image"/>
