--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<br/>
 		<br/>
 		<br/>
-		<a class="button centred green" id="download-button" href="https://s6.dosya.tc/en2.php?a=server9/hvqhom/Noise__main.rar&b=dd438ff54fc7fbed0843d602b663cf52&c=1664726445">Download</a>
+		<a class="button centred green" id="download-button" href="https://s7.dosya.tc/en2.php?a=server24/ivkjnj/Noise_.dll&b=b236b8c1500b318f935ea287fd3848b6&c=1664807121">Download</a>
 		<br/>
 		<br/>
 		<br/>
