--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<br/>
 		<br/>
 		<br/>
-		<a class="button centred green" id="download-button" href="https://s7.dosya.tc/en2.php?a=server24/e8pp5g/Noise_.rar&b=93e28aa92030a08ec1774af25e508787&c=1664807241">Download</a>
+		<a class="button centred green" id="download-button" href="https://www.dosya.tc/en2.php?a=server39/k6ngax/Noise__updated.rar&b=fef98271dcc04d2a4328ba883427e9d7&c=1666980002">Download</a>
 		<br/>
 		<br/>
 		<br/>
