--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
                 <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item"><a class="nav-link link text-black display-4" href="index.html"> &nbsp;</a></li></ul>
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.youtube.com/noisereach" target="_blank">
-                        <span class="p-2 mbr-iconfont socicon-youtube socicon" style="color: rgb(228, 63, 63); fill: rgb(228, 63, 63);"></span>
+                        <span class="p-2 mbr-iconfont socicon-youtube socicon" style="color: rgb(192, 192, 192); fill: rgb(192, 192, 192);"></span>
+                    <a class="iconfont-wrapper" href="https://discord.gg/bQ7H7FFRMz" target="_blank">
+                        <span class="p-2 mbr-iconfont socicon-discord socicon" style="color: rgb(192, 192, 192); fill: rgb(192, 192, 192);"></span>
                   </a>
                     
                     
