--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <span class="mbr-iconfont mobi-mbri-download mobi-mbri"></span>
                         </div>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="https://www.dosya.tc/en2.php?a=server40/kosmaf/Noise0.7.rar&b=7ad7a2176e9be10c6558878bf7e17f68&c=1670314132" data-aos="zoom-in">Noise 0.7</a></div>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="https://www.dosya.tc/en2.php?a=server39/k6ngax/Noise__updated.rar&b=fef98271dcc04d2a4328ba883427e9d7&c=1666980002" data-aos="zoom-in">Noise+ </a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="https://s6.dosya.tc/en2.php?a=server11/jwywap/Noise_Noel_Update.rar&b=08ed58e8ffb4c93cc00287de8d818a3c&c=1671230931" data-aos="zoom-in">Noise+ </a></div>
 		<br/>
   <section id="content">
                 <div class="centred">
