--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <span class="mbr-iconfont mobi-mbri-download mobi-mbri"></span>
                         </div>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="https://www.dosya.tc/en2.php?a=server40/kosmaf/Noise0.7.rar&b=7ad7a2176e9be10c6558878bf7e17f68&c=1670314132" data-aos="zoom-in">Noise 0.7</a></div>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="https://s7.dosya.tc/en2.php?a=server26/hw4s7x/Noise_.rar&b=2838dbdccb416c3f6931c58ffd1af754&c=1671749175" data-aos="zoom-in">Noise+ </a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="https://www.dosya.tc/en2.php?a=server40/clweaz/Noise_.rar&b=d5637f8881a9a471cd9644417de247f6&c=1671750112" data-aos="zoom-in">Noise+ </a></div>
 		<br/>
   <section id="content">
                 <div class="centred">
