--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                             <span class="mbr-iconfont mobi-mbri-download mobi-mbri"></span>
                         </div>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="https://www.dosya.tc/en2.php?a=server40/kosmaf/Noise0.7.rar&b=7ad7a2176e9be10c6558878bf7e17f68&c=1670314132" data-aos="zoom-in">Noise 0.7</a></div>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="https://www.dosya.tc/en2.php?a=server40/k0g8ia/Noise_.rar&b=1d0c56d93fee7e064df446dfa144a09d&c=1674243639" data-aos="zoom-in">Noise+ </a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="https://drive.google.com/file/d/1cABGT0vIafGdaZrMbuzBJiChV5eyKZYZ/view?usp=share_link" data-aos="zoom-in">Noise+ </a></div>
 		<br/>
   <section id="content">
                 <div class="centred">
