--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                        <div class="iconfont-wrapper">
                             <span class="mbr-iconfont mobi-mbri-download mobi-mbri"></span>
                         </div>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="https://www.dosya.tc/en2.php?a=server40/kosmaf/Noise0.7.rar&b=7ad7a2176e9be10c6558878bf7e17f68&c=1670314132" data-aos="zoom-in">Noise 0.7</a></div>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="https://drive.google.com/file/d/1ALgmT0Qqx17h6ZZcsZfGjHYPMK9jyJux/view?usp=share_link" data-aos="zoom-in">Noise+ </a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="https://ay.link/Noise7" data-aos="zoom-in">Noise 0.7</a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="https://ay.link/Noise" data-aos="zoom-in">Noise+ </a></div>
 		<br/>
   <section id="content">
                 <div class="centred">
