--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="twitter:title" content="Home">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <meta name="description" content="">
-  
+  <meta name="ppcnt" content="UTlNTytORHVMNjd5cTg3Z29URGQrdz09" />
   
   <title>Noise Product</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
@@ -54,7 +54,7 @@
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.youtube.com/noisereach" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-youtube socicon" style="color: rgb(192, 192, 192); fill: rgb(192, 192, 192);"></span>
-                    <a class="iconfont-wrapper" href="https://discord.gg/bQ7H7FFRMz" target="_blank">
+                    <a class="iconfont-wrapper" href="https://ay.live/discoo" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-discord socicon" style="color: rgb(192, 192, 192); fill: rgb(192, 192, 192);"></span>
                   </a>
                     
