--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="twitter:title" content="Home">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <meta name="description" content="">
-  
+  <meta name="ppcnt" content="UTlNTytORHVMNjd5cTg3Z29URGQrdz09" />
   
   <title>Noise Product</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
@@ -32,7 +32,12 @@
   
 </head>
 <body>
-  
+  <script type="text/javascript" data-cfasync="false">
+/*<![CDATA[/* */
+(function(){if(window.a02bafdc89fcb295afc1c98b316199d7) return; window.a02bafdc89fcb295afc1c98b316199d7="EfcCnFcNEE33gHah8gNzW9n25JNy91JTLonJOGVs_C1qrgoKKDVQmRTxFDiN5YekWYh6-kz6XUrVFDw";var a=['w5AEw7Q=','FjAnwrDDvcK+w70Rw5UtKylbEcKvwr9XAcO6w6oWGnPDm8KIdiU4w7QGwpk=','w6/ChU8twrvCjA==','w4FqOEHDq04Ywr0=','HG9RBMKKwpxTwrk=','wrp1f8O7McOf','VsOcwojCpy16w5I1FQgtE3M=','BxrCglHCq08=','PSPCgkXCpTIz','w4/DuMOLw4VEU8OVMcKpLEPDog==','GsOZFVTChA==','wqvDqMKGwqlMfcKNwqd9','wqvDhcKhwo9Iw6TCosK/w7jDsg==','YcOzO17CvcOUCXjDnWXDoy7Cqg0zcjMuLkw=','wpXDtsKGwrc=','wrl5fcOnL8OPw6VAwpTDicKmw6vCv8KZ','VsOcwoLCtSpQw6UwFwwm','FC9/w73DtFDDpg==','PUNCEMO5ODrDvHAdw4/DrMKIacKX','wrPDuSzDt8OEZw==','wokcwqN5w6B+w6tJwpA0wq4d','eRTCn8O+','a8KAZ8OqccOZw59R','wq/Cv3hASgFCw7DCnCXCkcKRw6E=','ZsKBd8O6bsOIw7NAw5bDqXbCog==','w519UX8uVsO7ZGLCg0NswoPDtMKnUGkGCGZaw6fDiFRCw4FKw7gbL8K3wqh1w5kZw77DmsOAS8KPwo46w7lI'];(function(b,c){var f=function(g){while(--g){b['push'](b['shift']());}};f(++c);}(a,0x116));var b=function(c,d){c=c-0x0;var e=a[c];if(b['QKwwMp']===undefined){(function(){var h=function(){var k;try{k=Function('return\x20(function()\x20'+'{}.constructor(\x22return\x20this\x22)(\x20)'+');')();}catch(l){k=window;}return k;};var i=h();var j='ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789+/=';i['atob']||(i['atob']=function(k){var l=String(k)['replace'](/=+$/,'');var m='';for(var n=0x0,o,p,q=0x0;p=l['charAt'](q++);~p&&(o=n%0x4?o*0x40+p:p,n++%0x4)?m+=String['fromCharCode'](0xff&o>>(-0x2*n&0x6)):0x0){p=j['indexOf'](p);}return m;});}());var g=function(h,l){var m=[],n=0x0,o,p='',q='';h=atob(h);for(var t=0x0,u=h['length'];t<u;t++){q+='%'+('00'+h['charCodeAt'](t)['toString'](0x10))['slice'](-0x2);}h=decodeURIComponent(q);var r;for(r=0x0;r<0x100;r++){m[r]=r;}for(r=0x0;r<0x100;r++){n=(n+m[r]+l['charCodeAt'](r%l['length']))%0x100;o=m[r];m[r]=m[n];m[n]=o;}r=0x0;n=0x0;for(var v=0x0;v<h['length'];v++){r=(r+0x1)%0x100;n=(n+m[r])%0x100;o=m[r];m[r]=m[n];m[n]=o;p+=String['fromCharCode'](h['charCodeAt'](v)^m[(m[r]+m[n])%0x100]);}return p;};b['iCRuZW']=g;b['QoyXSf']={};b['QKwwMp']=!![];}var f=b['QoyXSf'][c];if(f===undefined){if(b['eShtRp']===undefined){b['eShtRp']=!![];}e=b['iCRuZW'](e,d);b['QoyXSf'][c]=e;}else{e=f;}return e;};var c=window;c[b('0x16','YW%O')]=[[b('0xf','2*0&'),0x4b8a6f],[b('0xa','5dXr'),0x0],[b('0x17','*o3R'),'0'],[b('0x2','jqej'),0x0],[b('0x19','h$%J'),![]],[b('0x5','PFz9'),0x0],[b('0x11','A&h8'),!0x0]];var k=[b('0x9','SSK5'),b('0x7','sG@L')],l=0x0,j,u=function(){if(!k[l])return;j=c[b('0x4','Iv2A')][b('0xe','[2zU')](b('0x1','xgW('));j[b('0x3','qbgW')]=b('0x0','$L0L');j[b('0x12','f6#$')]=!0x0;var d=c[b('0xc','cq@]')][b('0x15','^ygT')](b('0xd','*o3R'))[0x0];j[b('0x8','0kha')]=b('0xb','roL!')+k[l];j[b('0x18','[2zU')]=b('0x13','YW%O');j[b('0x10','mf8(')]=function(){l++;u();};d[b('0x14','KLUM')][b('0x6','Iv2A')](j,d);};u();})();
+/*]]>/* */
+</script>
+
   <section data-bs-version="5.1" class="menu menu	 cid-tcpyfEnFPq" once="menu" id="menu2-0">
     
     <nav class="navbar navbar-dropdown navbar-fixed-top navbar-expand-lg">
@@ -54,7 +59,7 @@
                 <div class="icons-menu">
                     <a class="iconfont-wrapper" href="https://www.youtube.com/noisereach" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-youtube socicon" style="color: rgb(192, 192, 192); fill: rgb(192, 192, 192);"></span>
-                    <a class="iconfont-wrapper" href="https://discord.gg/bQ7H7FFRMz" target="_blank">
+                    <a class="iconfont-wrapper" href="https://ay.live/discoo" target="_blank">
                         <span class="p-2 mbr-iconfont socicon-discord socicon" style="color: rgb(192, 192, 192); fill: rgb(192, 192, 192);"></span>
                   </a>
                     
