--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                             <span class="mbr-iconfont mobi-mbri-download mobi-mbri"></span>
                         </div>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="https://ay.link/Noise7" data-aos="zoom-in">Noise 0.7</a></div>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="https://ay.live/noisez" data-aos="zoom-in">Noise+ </a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="https://ay.live/noiseq" data-aos="zoom-in">Noise+ </a></div>
 		<br/>
   <section id="content">
                 <div class="centred">
