--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                        <div class="iconfont-wrapper">
                             <span class="mbr-iconfont mobi-mbri-download mobi-mbri"></span>
                         </div>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="https://ay.live/noiseg" data-aos="zoom-in">Noise+</a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="https://ay.live/noiseu" data-aos="zoom-in">Noise+</a></div>
                 <div class="mbr-section-btn mt-3"><a class="btn btn-primary display-7" href="https://ay.link/Noise7" data-aos="zoom-in">Noise 0.7 </a></div>
 		<br/>
   <section id="content">
