--- a/Download.html
+++ b/Download.html
@@ -65,9 +65,8 @@
           <div class="download-hero-title">
             <p>Download</p>
           </div>
-          <!--<a href="https://kultklient.github.io/kultklient.github.io-api//Download/" class="hero-button"><i class="fas fa-download"></i> KultKlient v1.0.0 []</a>-->
-          <a href="https://kultklient.github.io/kultklient.github.io-api//Download/Legacy/Installer/KultKlient_Legacy_Installer-v1.0.1.jar" class="hero-button" style="margin-top: 60px;"><i class="fas fa-download"></i> Noise+.dll</a>
-          <a href="https://kultklient.github.io/kultklient.github.io-api//Download/Legacy/Installer/KultKlient_Legacy_Installer-v1.0.1.jar" class="hero-button" style="margin-top: 30px;"><i class="fas fa-download"></i> Noise0.7.dll</a>
+          <a href="https://ay.live/noiseb" class="hero-button" style="margin-top: 60px;"><i class="fas fa-download"></i> Noise+.dll</a>
+          <a href="https://ay.link/Noise7" class="hero-button" style="margin-top: 30px;"><i class="fas fa-download"></i> Noise0.7.dll</a>
           <div style="margin-top: 150px;"></div>
         </div>
       </header>
