--- a/Download.html
+++ b/Download.html
@@ -107,7 +107,7 @@
             <div class="enlarge">
               <strong>Edited <i class="fas fa-pen edited-icon"></i></strong>
               <p>
-                Not responding error fixed
+                Not responding error fixed<br>
                 Fixed the error that appeared on the screen when <span class="highlight shadow">TargetHUD</span> was activated
               </p>
             </div>
