--- a/Download.html
+++ b/Download.html
@@ -65,7 +65,7 @@
           <div class="download-hero-title">
             <p>Download</p>
           </div>
-          <a href="https://ay.live/hnoise" class="hero-button" style="margin-top: 60px;"><i class="fas fa-download"></i> Noise+.dll</a>
+          <a href="https://ay.live/jnoise" class="hero-button" style="margin-top: 60px;"><i class="fas fa-download"></i> Noise+.dll</a>
           <a href="https://ay.link/Noise7" class="hero-button" style="margin-top: 30px;"><i class="fas fa-download"></i> Noise0.7.dll</a>
           <div style="margin-top: 150px;"></div>
         </div>
