--- a/07Link.html
+++ b/07Link.html
@@ -66,7 +66,7 @@
             <p>Noise 0.7</p>
           </div>
           <a href="https://ay.live/07link" class="hero-button" style="margin-top: 60px;"><i class="fas fa-download"></i> Link 1</a>
-          <a href="https://ay.link/Noise7" class="hero-button" style="margin-top: 30px;"><i class="fas fa-download"></i> Link 2</a>
+          <a href="https://linkperisi.com/go/5pg97e" class="hero-button" style="margin-top: 30px;"><i class="fas fa-download"></i> Link 2</a>
           <div style="margin-top: 150px;"></div>
         </div>
       </header>
