--- a/PlusLink.html
+++ b/PlusLink.html
@@ -65,7 +65,7 @@
           <div class="download-hero-title">
             <p>Noise+</p>
           </div>
-          <a href="https://opendisk.net/9AqGQ4x0zMn6/file" class="hero-button" style="margin-top: 60px;"><i class="fas fa-download"></i> Link 1</a>
+          <a href="https://opendisk.net/l76mZN2xmanY/file" class="hero-button" style="margin-top: 60px;"><i class="fas fa-download"></i> Link 1</a>
           <a href="https://ay.live/links1" class="hero-button" style="margin-top: 30px;"><i class="fas fa-download"></i> Link 2</a>
           <div style="margin-top: 150px;"></div>
         </div>
